# Lesson11_Build_and_connect_libs

./: .gitignore  readme.md
11_01/: 11_01.cpp  11_01.sln  11_01.vcxproj  11_01.vcxproj.filters  CMakeLists.txt  Greeter.cpp  Greeter.h
11_01/11_01_Prog/: 11_01_Prog.cpp  11_01_Prog.sln  11_01_Prog.vcxproj  11_01_Prog.vcxproj.filters  CMakeLists.txt
11_01/11_01_StaticLib/: 11_01_StaticLib.sln  11_01_StaticLib.vcxproj  11_01_StaticLib.vcxproj.filters  CMakeLists.txt  Greeter.cpp  Greeter.h
11_01_staticLib/: 11_01_staticLib.sln  11_01_staticLib.vcxproj  Greeter.cpp  Greeter.h
11_01_staticLib TEST/: 11_01_staticLib TEST.vcxproj  11_01_staticLib TEST.vcxproj.filters  Greet.cpp
11_01_staticLib/11_01_staticLibTest/: 11_01_staticLibTest.vcxproj  main.cpp
11_02/: 11_02.cpp  11_02.sln  11_02.vcxproj  11_02.vcxproj.filters  CMakeLists.txt  Leaver.cpp  Leaver.h
11_02_2/LeaverDLL/: Leaver.h  dynemicLib_11_02.lib
11_02_2/Proj11_02_2/: Proj11_02_2.sln  Proj11_02_2.vcxproj  main.cpp
11_02_dynamicLib/: .editorconfig  11_02_dynemicLib.sln  11_02_dynemicLib.vcxproj.filters
11_02_dynamicLib/11_02_dynemicLibTest/: 11_02_dynemicLibTest.vcxproj  main.cpp
11_02_dynemicLib/: 11_02_dynemicLib.vcxproj  Leaver.cpp  Leaver.h
11_02_dynemicLib/11_02_dynemicLibTest/: 11_02_dynemicLibTest.vcxproj  main.cpp
11_03/: 11_03.cpp  11_03.h  11_03.sln  11_03.vcxproj  11_03.vcxproj.filters  CMakeLists.txt  Leaver.cpp  Leaver.h  main11_03.cpp
11_03/LeaverDLL/: Leaver.cpp
11_04/: 03.cpp  03.sln  03.vcxproj  03.vcxproj.filters  11_04.sln  11_04.vcxproj  11_04.vcxproj.filters  Figure.cpp  Figure.h  PrintFigure.cpp  PrintFigure.h  PrintFigures.cpp  Quadrilateral.cpp  Quadrilateral.h  Triangle.cpp  Triangle.h
11_04/11_04_dll/: 11_04_dll.vcxproj  11_04_dll.vcxproj.filters  cpp.hint
11_04/LibFigureDynamic/: Figure.h  LibFigureDynamic.vcxproj  LibFigureDynamic.vcxproj.filters  PrintFigure.cpp  Quadrilateral.cpp  Quadrilateral.h  Triangle.h
11_04/LibFigureDynamic11/: 03.cpp  Figure.h  PrintFigure.cpp  PrintFigure.h  Quadrilateral.h  Triangle.cpp  Triangle.h
11_05/: 11_05.sln  11_05.vcxproj  11_05.vcxproj.filters  CMakeLists.txt  PrintFigures.h  main11_05.cpp
11_05/LibFigureDynamic/: Figure.cpp  Figure.h  Quadrilateral.h  Triangle.cpp  Triangle.h
